# PSPTool

./: README.md  default.nix  pyproject.toml  shell.nix
.github/workflows/: comment-metrics.yml  create-metrics.yml  publish.yml  python-tests.yml
psptool/: __init__.py  __main__.py  blob.py  cert_tree.py  crypto.py  directory.py  entry.py  errors.py  fet.py  file.py  firmware.py  header_file.py  key_store_file.py  microcode_file.py  psptool.py  pubkey_file.py  rom.py  utils.py
tests/: gha_metrics.py
tests/integration/: test_psptrace.py  test_rom_files.py
tests/unit/: test_cli.py
